@@ -1,4 +1,10 @@
 
+Change Log Update (00.00.26)
+* 2016-03-24
++ Created global prompt that are shared system wide, they are accessed via the communicator object
+  for easy of use and access, global prompt keys are created in the data/structures file
+  while each module with have it's specific in their own mod_xxx.hpp file.
+
 Change Log Update (00.00.25)
 * 2016-03-24
 + mod_logon now has the initial read/write of module specific text prompts
